--- a/day10/backboard/build.gradle
+++ b/day10/backboard/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
 	// DB연동용 의존성
 	runtimeOnly 'com.h2database:h2' 	// 개발시에만 사용하는 InmemoryDB H2
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'  // 운영용 Oracle
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	// JUnit 단위테스트
