--- a/day10/backboard/src/main/resources/application.properties
+++ b/day10/backboard/src/main/resources/application.properties
@@ -13,15 +13,22 @@ logging.file.name=C:/temp//backboard.log
 ## H2 DB 설정
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 # H2 DB 파일위치 : ~/ (user/Admin/ 에 생성) : ./ 현재 프로젝트 폴더에 생성
-spring.datasource.url=jdbc:h2:./local
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.datasource.url=jdbc:h2:./local
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+## Oracle 설정
+spring.datasource.url=jdbc:oracle:thin:@localhost:11521:XE
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=backboard
+spring.datasource.password=12345
 
 ## JPA 설정
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# H2용
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=update
 # 테스트시 쿼리 확인
 spring.jpa.properties.hibernate.format_sql=true
