--- a/day16/backboard/src/main/resources/application.properties
+++ b/day16/backboard/src/main/resources/application.properties
@@ -68,8 +68,8 @@ spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis
 
 # Google OAuth2 개인 구성 설정
 spring.security.oauth2.client.registration.google.client-name=google
-spring.security.oauth2.client.registration.google.client-id=261538302703-61t8sktr03svkft4oufnasth9m8hbe3c.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 
 # Google OAuth2 로그인 진입 URI, 스코프
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:9097/login/oauth2/code/google
